--- a/aDVanceERP.Core.Seguridad/MVP/Vistas/Autenticacion/VistaAprobacionUsuario.resx
+++ b/aDVanceERP.Core.Seguridad/MVP/Vistas/Autenticacion/VistaAprobacionUsuario.resx
@@ -121,63 +121,67 @@
     <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="fieldNombreUsuario.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="fieldImagen.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAZVJREFUOE+9
-        lD9LHFEUxdc2SkgXbU1hArZRO5VIJB8gEFIEbEK0F+xS+BVEtNJSkiJJGQwpUi37zovMu2/Wd9/gH1LY
-        WSho4S6M3GFdsld2d1Jkf3Dhcs65bxjum6lUBk2WVR/GFNNS0mv/n2CPFSZcM+FGKhCuAmFZ50oRHd7K
-        YdHZ92fAA6lA+FA8wJs3Ot8XJvyJZFfv6Q5rTDjVek/qdYwxIQ+JmdAeOzwV75iqj7XXlTRNR5jQ5NRM
-        aS9L7AwTGkmSDGuvJ+zxK3p8yvN86E6TPjp8ZsLPznQJItlnTLhksvuyoGJJ3vxgwoW8ts6XIiM8ic5+
-        Y8J5UR5fozPjOjdY2NeeB4fXZUqyer6D6OxSsV3CUclqsjfv9DltmMxeILul9W6wN9syo/U2kbDJhC9a
-        70axMGc2tN4mI7yUn0B0ZkF7mkNvF+WCc/L7hfY6CA7rRdBjR4b+/sTStDbKzrxih90iQ/Zj53QXgse8
-        XOjWgvLWL0xK+kYgfM9cbVbP9eXk4OBRPTGTh2TmpKQXTef+K7fsUGlhlz1hxgAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABGdBTUEAALGPC/xhBQAADAZJREFUeF7t
+        nXlsm+Udx9NtkMup7ytxfJQC2vhnE9p/TCqJ49iJb8d2TiexU6ZBq2kbiDEmkeay4yOucztHm6RpDttp
+        BRObNLRJMLWjjImWcA2hjWnlKoOicZRC09/0OHlL+zShtvM6vt6P9FWiyHHf9/vR+7zv++R93Lw8CgoK
+        CgoKCgoKCgoKipjhhh6kiZfbm8sXbV0ooqXWJm7ITMNfR5FsIG+XZLn1V+Kltk/Ei61QTmQBxfZJ+YLt
+        l+g1+K9RxEtn53ckkY4aWdjeK43Yg5KQ3S1ebtOgn197Tcj8XfFS27x4qQ02kQHlx20giqZlHr32+vcu
+        PdasFR1r9pTNNQeFc009gtkm1Q3vTfENkojjR5KQY1UatgOKJITSDpLlaN6QLrXr0OvEy+2BGGSAaD6a
+        APqd0lmbruxY8xtlx5qhbK4JSlFmiTSeKzva+EN8e3IaWbjjJ9JwxxdbyIgmKmGpdTUOGdGUHWtejYrY
+        XAaUzjSCcKbxi9K5hvvw7cpJ+HMtxdKw471by9hIfDK+ydYyQDjTAMKjDe+hbcG3L+eQhR0Pp4GMaARH
+        6h/Gty+ruSdkvv3uJ+0l134AebukEcdb6SBDeCQq5K3rr84409oStM3XtjcbQDskW9l/ULay/6ws4rgi
+        jThAEnF8Kg05npWF7fNpJCMa/nTDvGDa+qxg2vopf8oK/CnrFf6U5SXBpOWhvOADt+H7l1GUP2kvlUU6
+        XpatdIAs4gAkI5owSnoMU9fLEEyjWKPZkAH8KQvwJy3AQ5kwn+MEjUJ8PzOCvb8/mJ9lMoi8lJHDmOyE
+        4+EslAG8YB1wgqZf4Pub9shWOl7PRhncqJC6V/D9TWvuCT1Ik0UcV7NRRjTjdWsZdc+y58T+u7JYBnDH
+        TSh34vudtohDHfdmuQzgjJrvxfc7rUCTg7KI44BsxTEijdhPZbWMMRNwx4ynuWPGEfaY6QB3RJ8+k5N7
+        Vvb/WLbS8bdsPYFvJoMzZgTO6HrYKCMGlBc4o/rUHjWysF0hW+n4gpKxkWH95+xBnRzvaUeQhtoEspWO
+        i5SMazKAtZ6L/DEDD+8r6cgi+z2UjJtkAGtID+whnRPvK+nIIo5/UDJulsEa0gFrUPc63lfSkUQcX1My
+        NpUBzEHdl3hfyWX97xifUzI2lQHMQe1neGVJRxqyv5CVMpCAIQNwhvTAGTYkIgMYAc0ZvK+kI4s4erJK
+        Bjoi0Al5QAssjxpYbjWwfVpgBXRxyWAGUDQ9eF9JRxbqqMoqGYN6YHs1IHCpwHHCALaIATh9KmC5a4F1
+        WBuHDC3QBzUKvK+kIT3ZxpBGHIckIfvFbJLB8mhA6q2B58+3wBVwRPPnfzZDqWtDil8TkwwGymHNRYZf
+        28nw6xl4f6QiCbVXSMP289l2ZCAZewdq4Oz7tmsyiPz1P81Q7lICs78GmEjKrWV8E7/6PMNXez/eIymI
+        w45Kadj+ZbbJQMPUVjJukOJWAjM6fGlilQF0lAH1JbpfU4H3uS1EIXOhNNz+72yUgYapM9cNU1tlebUB
+        GD3VwPTUxiNjI7X/yuvcV4D3mjDSsKM+l2WgfHLZDoxDCmAgIRsiYpQBdF8t0AdqLHivCSNebh/PZRko
+        f3yrEejd1cDw1MQtYzeKt2YE7zVhJCH7yVyW8eqFVrjTqwKGSwUMrzp+Gb4aKPHWhvFeE0ay3D6dFBkz
+        G9khGd92NbVVXnynBST9SmC4lOvD1eH4Zez2IiGqIN5rwkiX21tJlYGKn7SCMGgBYdC8/nW6IakyYrma
+        wvP3dzdkOLcnIxpfbTPea8KgqyzxUtvbpMg42gjCcQsIhkzA9+uA79MBP2AAwZgJBEhSkmQkPEyRIcNb
+        8zapV1kI8WJ7HWkyAgZoPGmGdz9rh/99ZYdDz9UDb0AHglETCCaspMog7sDjkfHah7aNcwYpMoDmVdXh
+        fZKCeKF1lgwZD/7BApev3ljC6IuNwENHy4gJ+BMW0mSkdJhC5w6PahbvkRzQYsuF1vmEZMwiGVYQBIzw
+        0CYyiIwQUoZNwA+aE5OB/paR4Dnj5fdtsMdD2jCFZADNrbpx8SkpQN4u0aJtLiEZc00gnKwHwbAJrCtm
+        uLR2cxHXx326HnheLfCHjcAbNycsI5Fh6i4fqUfGetzoq3KO1GXa4kXbo4nKQPcYwqAV+H49nLvQelMR
+        mwVJ4Xq0wBtCUuqSLuP1ZMpwK4HmVkJJv/IRvNeEEIVsZeWLrV8mKmNdiAUEfj2c/SA2ISjrUjTAGzQA
+        d6wuo2XQ+lGqLxX1V5Xi/caNaKHt4HZkRM8fE1bgDxnBslJ3yyHr+vSfqgeOWwPcgB64o6akyLjbR+45
+        YwsZ63Epfob3GzflC7bp7ciI3gSiFa5j5uiwZY3Uwedf228qZ6sMv9AAnH71upQR45Yy4j2Br35ggzs8
+        O3JkbMhAX5Xbv1sXHbfNbUsGMR2CLmPRSXpAD5ZEpLhqgXNYty5lm3fgqZBRjOJUzOD9xo3ouO2Jbcsg
+        pkOm6oE/Wgc8JCUcn5ShM1ZgIyl+HXDR0yCZJwOKXIrf4v3GjXi+6Qei4y1Xty2DmA5Bl7FIik8HlrAp
+        PinPW4HtrAGOX5txMoqdiqu0fvn38X4Tomze9iQpMojpkElL9I6c69WBOQEprL6ahGXQUyMDndBP4r0m
+        jGyhgS+ab3mVFBnEdMiEBXhRKVpoPWmCS2uxS/GdssR3NfXfVrh7YCevpm6UUexUvELzKMh9Il58vJFZ
+        dqz5KVJkENMh6DJ22AgcrxbMIWNcR0qseSW1wxTKU3RnLRPvkxwgb1fZXFM3KTKI6ZCgGbjo0U2PhnQp
+        SMZe8qbQ45ZBc1Z3kTplshllc01zpMkgpkPQZSyS4laDedlAipRUy9hIkmZ6NyibbxKVzjZ9RaoMIsR9
+        BZKytD0paSGjrwqK+qouF/arRHiPpFE21/R4UmQQd99ISkAP7P5aMC/pE5KSRjKI/AbvkTSEs81PJ00G
+        MR2ClgMEdMBy1ULdYnxS0k5GL0rlU3iPpCGcbTyTVBnEYpkRI7APa4HlrIlZSnrKkENhr/w03iNplM40
+        /i7pMtCwhVYuDRuA7dcCE0lZ0H2rlFcvpK0MFPJuCHGEs40/3xEZxDKyYQOwBjTA7FNtKSWtZfSgVBzA
+        eySNslkbW3i04eMdkUEsI0OP/yMpvUowLejgs+ukpL+Myg93d1az8B5JRXCkvk54pGFtR2QQQU+be9XA
+        6FWCakYLJ15rgLEz1uijOqmam4pBxpWi7ko93l9SEE43mPhHrBd3RAaxaomQgp6v7akGek/1+vfpKeOj
+        wp4KA95bUhFNmVn8Kctjwmnr2aTLIJaRoTUZPk30gWeGtxaYA+o0k1F5tqC38jG6874kzV3FiGCyfl/S
+        ZcS+jCwlMgq65fvwXlIGb8JSncsy0DBV3CuvxntJGYIJc1suyyjsqYSCroo2vJeUwZ+yduSyjMLuSijo
+        rnTgvaQM/qS5IpdlrAtJo3MI+shU3oT5Yg7L+DivU1OE95JSeOOmQ7kpA6XiCbyP1BN84DbeeN2fck5G
+        1/3P5HXu+x5eR1qwd1CVzx0zBbjjpq9zQMZX+V0V/rzODPhgfsawUcIdNx7kjppcKGyUEcPpzJVRdaqw
+        W+4ikt9VcaCwUy7G9zuj4IwaGzNTBkpFA74/GQ9/1LQnM2VUQkGnfA++P1kBa9hwLtNkFHZXnsX3I2tg
+        j+jbMkwGFHTJbfh+ZA+Qt4s1pFvKFBmF3fKFpD95mHI6zbezBrV+5qB2bQsZHzH86r8kW0Zxn/y5or6q
+        j7aQsVbYVenLC96b2f8rWzzsDqjvZA7qeukBzdOMgPoZRkA7zAioDXmDqnz0MRT0AfWbSZPhrHoz+lEX
+        g6r8wp4qQ2GvfKSoR/5MQY/86aJueU9+5769+PbmPHSfupI+ULsWo4wLNLfyw1hkFPVVrdGcCnI/ci9X
+        oPtqH7+1DNUq3aOQodD6q1dvIQMNVb/G/x2KONjtrWnZ7VW9s4mMyyVu5QC3cx+NeC36nuaq9he7qi9v
+        IuN8sVPRdOO7UyQGOqe4VYoSj/KREo/q0RKP0vFtK5KKeyv5Ra6qnxY7FX3FTsVjxb2KKtI/HomCgoKC
+        goKCgoKCgiJL+D/jrcWt3koixQAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="fieldPassword.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAATZJREFUOE+9
-        k7FKA0EQhlMq6gPYKKjvoGJroWUKX8vKTmwULXwEU9hImp0N7s5t3NkzJBptLATb2MifS4K3cOYOznzw
-        w/DPP8PecttoLBrn3Gpq9B5kjFmJ+5VIbWdfmN6EaTTRMDjajXOlGLbby8L0KkznOKX3D2uB9YUwDfr9
-        +6U4PxefqANh+sbiqYdPhoeT59Ml8JZOhOkj9uGhF/uFBKu2hHXzyapTSegLw78Fb9xj3UQ2ns8hVh3j
-        8j3TC+5KEv0uTL2cMm8wyYy800fxnhnC+hKK/SKE1dWf+ZDQrVh1FvtFIIuZ2J/xrwu7XVp/dnonqzub
-        PUcbqOGhh7rSQrF0I0yP45p1S5juspqMT+g6y1RYWPsJy7D4hbX/h9OXEpg+y2juSwEp03aw6rCMkI3n
-        a+cHfZCTUhKsl+EAAAAASUVORK5CYII=
+  <data name="fieldMensaje.Text" xml:space="preserve">
+    <value>Tu cuenta ha sido registrada &lt;b&gt;exitosamente&lt;/b&gt;. Sin embargo, para poder acceder y utilizar todas las funcionalidades, necesitarás esperar hasta que un administrador apruebe tu cuenta. Esto puede tomar un tiempo, así que te pedimos que tengas paciencia.
+&lt;p&gt;Una vez que tu cuenta sea aprobada, recibirás una notificación y podrás comenzar a usar el sistema de inmediato.&lt;/p&gt;
+&lt;p&gt;&lt;b&gt;¡Gracias por tu comprensión y paciencia!&lt;/b&gt;&lt;/p&gt;
 </value>
   </data>
-  <data name="resource.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAnJJREFUSEtj
-        YBjW4H2BgcDbXKMZryKNnz53N/393NHk3zMnk38vPU1+vY42fvQu13DaswZjLnR9RIF3BUbdL9xNfz+1
-        NP2PD4Mse1dg1IKuHyf4n2bM+ibe+BK6QXixlen/N1lGm9DNwgrexBtfxjCAAH7ubvLrY76BKbpZGOBt
-        tmEPuuZnNqb/38QaX3+TbZz5NttU+0ONmeLbEqPU1/HG10ByLzxMfn0q17FCNwsD/L+qzfau2PA9iuEu
-        xn/flRpGoquFgbel+uEfS/TM0cWxgj/79SJ+H9D9/3mCwf9njibgcH1boh+Gro5s8Gu/3gqQBSD8Y53e
-        //eFhvvR1VAEfh/QuQWzAIR/7dcxQVcDAqKpB/4TwiZFa3+i62P4fUD3M7IF/3fqcaOrAQF0w7Bh+cxd
-        /9D1gSz4Qi0L5DJ3Y7MALYgOaGNN1+iGYcMG+et+oetDieSju83/t2x2PYeuBheIqJ96HdmCgJrZD9DV
-        gJPpzwO6/+dvt//vuz7gv9/6gP/Td9gRTKblfQ1Rkmn7UHyQ3d45EV0dOKO1bHH57LM+4D8MR27w/Ttr
-        u0MEuloYaJyRFamSte0fsuE6+Rt/l3R3Y40/hknbnDqQLQDhgA3+/6u3uF2fttkpcf56B4F1e5yF52xz
-        TGrb4nolcF3A/6juZhTX53Z2dqCbiwLqtrqeRreEEE6fnftfJmP3/9jGSUfRzcMAZ2amsTZucbuAbggh
-        XLM47kRDQwMbunk4wcStTn1xG31+oxuEjpM2ev+astWxC10/UWDVKgeemduceqq2uN2N2+D7CxQfAev9
-        /4PYFZs97k7a5tS/E0eGHD4AAHlcRZUYp+NyAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="resource.Image1" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAqlJREFUSEvd
-        1d1LU2EcB/ADy6mhlmVYJjnfJjO66r7/IJBSEoqI8KKL6q7bKSmbbzmcNtxwbtMFIkWJUNRNRCtIiJQC
-        07np8X0vnp2zM4c53TdOsdP2nHNMb/3eP5/v4fe8HIo60ql6jexad+yW1hV9oXVyPq2DZSqHWKZ8MOIr
-        t0Wel9mYm1Vmbza57kC56Obrde7YQo0rCq2TQ7WDRaWdRcVgBBobgzLrJi4MhFFqCflL+wLXyfXKGYOq
-        1h3r1Y3wOACO80+DKOkPoNgcNAlrSU4SnXur/7D4WXMAxb0bONOz1kt6GdGNbNXth19yMBiYimNybQc0
-        t4uZcAK3J9i/uGkdRT1ryaKe1auk+ycaB3L2m7nGuonJ9QTIPHzHpXCcfrKKwq5lPyW38bphvlEJF8ZS
-        P86JaGIPsE/H0erhcWUklIav4GTnMk500g2kT9W4uFElXJj5o/e8WGD5upU+lky8Ywl5hqVnpE9pnZxX
-        CRc2tOtLTCy4/5ZVxPONNPKM9E/Sp6qdLK+EC6elO63g3puIMm6gkdu2GCV9qsLOxuTw7d2kCMvl2lgo
-        Az/etojc1gWZgsHILIkLX/6/glrLKokj57F/hvQpjZUZJXHhEg1NxzH8PY6pwI6IfqC34ZiKwf6NR4EU
-        h7rFJ91kjY1pJHHxhprW0fE5KhY0TWzKjSWFQ633So/pZSuySi2hWTlc2NDMgrAintUy/4NqUHiTSiyB
-        OjlcOC3tn/5dtLvjYSU8qdJ75Z+KVM71bRhIXDiKRk9mgQRvnscx/Vwb6UkzBpXwKpLn3OhhxYI7L0NS
-        vNlrUhyNXE51r9QXdq8spC6R4WN6QTBtLD6/Sj93iB9Oesze7IL2pcZ8I+0yeriNxF4Sv3aTaHoVXFa3
-        +J1q/fwN6oHMy3mk8htuYKzuHFqwMAAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <metadata name="infoIcon.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>138, 17</value>
-  </metadata>
 </root>
