--- a/aDVanceERP.Desktop/MVP/Vistas/ContenedorEstadisticas/VistaContenedorEstadísticas.resx
+++ b/aDVanceERP.Desktop/MVP/Vistas/ContenedorEstadisticas/VistaContenedorEstadísticas.resx
@@ -1,17 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-  <!-- 
+  <!--
     Microsoft ResX Schema 
-    
+
     Version 2.0
-    
-    The primary goals of this format is to allow a simple XML format 
-    that is mostly human readable. The generation and parsing of the 
-    various data types are done through the TypeConverter classes 
+
+    The primary goals of this format is to allow a simple XML format
+    that is mostly human readable. The generation and parsing of the
+    various data types are done through the TypeConverter classes
     associated with the data types.
-    
+
     Example:
-    
+
     ... ado.net/XML headers & schema ...
     <resheader name="resmimetype">text/microsoft-resx</resheader>
     <resheader name="version">2.0</resheader>
@@ -26,36 +26,36 @@
         <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
         <comment>This is a comment</comment>
     </data>
-                
-    There are any number of "resheader" rows that contain simple 
+
+    There are any number of "resheader" rows that contain simple
     name/value pairs.
-    
-    Each data row contains a name, and value. The row also contains a 
-    type or mimetype. Type corresponds to a .NET class that support 
-    text/value conversion through the TypeConverter architecture. 
-    Classes that don't support this are serialized and stored with the 
+
+    Each data row contains a name, and value. The row also contains a
+    type or mimetype. Type corresponds to a .NET class that support
+    text/value conversion through the TypeConverter architecture.
+    Classes that don't support this are serialized and stored with the
     mimetype set.
-    
-    The mimetype is used for serialized objects, and tells the 
-    ResXResourceReader how to depersist the object. This is currently not 
+
+    The mimetype is used for serialized objects, and tells the
+    ResXResourceReader how to depersist the object. This is currently not
     extensible. For a given mimetype the value must be set accordingly:
-    
-    Note - application/x-microsoft.net.object.binary.base64 is the format 
-    that the ResXResourceWriter will generate, however the reader can 
+
+    Note - application/x-microsoft.net.object.binary.base64 is the format
+    that the ResXResourceWriter will generate, however the reader can
     read any of the formats listed below.
-    
+
     mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with 
+    value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
     
     mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with 
+    value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
             : and then encoded with base64 encoding.
 
     mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array 
+    value   : The object must be serialized into a byte array
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
@@ -117,14 +117,44 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="best_sales_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\best_sales_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <metadata name="formatoBase.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="fieldIcono.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAfNJREFUSEvt
+        VD2LFEEQHblARU2NFp3rV6+r2oX9AxcIZn4kmqiRgYF/w+RAEPzCQBCMBI0UXFBQEMSLFP0DioiBwmEg
+        LqKcdyo1N7su7e3srFx4D5p5U91Vb+pRPUWxhVlgxBsV3O+KHMj3NgVG/K7XqlFudUPYVxTFnIkcTMQV
+        E7xPxPM6Pjvq4ldNsGjEwIjvRizX8a9G3DPiixGfjeFYlj6nikMWcSaL/0VVKMp55wD2apQLRtxIDEfL
+        stzhcRGBEa+M+GXERVUsGHHNIj7VH7KW1x3BD2jEUlEU2/K9cYjIdpNwfczSb0bcMYYH/p6fH2GYoIKb
+        3nK+nyPFcCRFnOr1erv83bufKpAiHnqbRul3Op2d+ZkmtBLwQxrlaeVxxKMkctZiuGSUx0Z8NOLJ8Itz
+        1MMxRYDS92mIEYsqYXU4QcrwTgV3jfhpDM+63e7u8VxV3ZMEH5oFpOpgkObn9/tSYlmBBSvL0qekikec
+        dBG/D17U8/xpgiWVsNYsMLSIctlt8dhGPEYcNuKHj2sKgUa89jujlNvTBWqLqktDnJvEjTxtxEottLLe
+        mfSbBTKLRrZM4MZwouIRx9fjMvAaed0R2lo0ibcb05YWbcw32aJ/eRuLfNwiXmoML/xnNwv33MYOEvG2
+        vlj/vbxGXncLjfgDrMwMyzQ+akoAAAAASUVORK5CYII=
+</value>
   </data>
-  <data name="productE_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\productE_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="btnGestionarVentas.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAATJJREFUOE+9
+        1L9KXUEQx/GP/xoR1KiIWlpYGKzSGUO0EK18CUG09hFCRKOQt/AtbLVPo6Y2KmglGqwSBvbAMtx7Rbn4
+        hYVzfr+zs2eYmeWd6cVHLJcVz6G9mlEc4hb/8FBWPIf2AyN5Uzu+lE2X2MZY5Y1jB79xg8+V15IVPOMA
+        fdms6C8ZxLdfs9kQp9/jqNJ6MFm9Z37iDh+yEezjvJze8AlPWK20moGS/vdsROWusZkN7JbUNrJR2MJV
+        rv5CqeBULVZ0CjpT9s7X4joea6EFUYRIfy4bRV+rhZcCTuAXzjCUvCjc3xywU8rTuMAJBrPZLuV2RYmJ
+        iT87xXDyGloWJdhr0TazOO4QrGmbb9kIYjZjnOrGfolo7D8dDrT0htFbzGamq5dDQ1evr5quXbBv5j+E
+        gkhWKHM+ywAAAABJRU5ErkJggg==
+</value>
   </data>
-  <data name="accountF_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\accountF_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="btnGestionarArticulos.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAATJJREFUOE+9
+        1L9KXUEQx/GP/xoR1KiIWlpYGKzSGUO0EK18CUG09hFCRKOQt/AtbLVPo6Y2KmglGqwSBvbAMtx7Rbn4
+        hYVzfr+zs2eYmeWd6cVHLJcVz6G9mlEc4hb/8FBWPIf2AyN5Uzu+lE2X2MZY5Y1jB79xg8+V15IVPOMA
+        fdms6C8ZxLdfs9kQp9/jqNJ6MFm9Z37iDh+yEezjvJze8AlPWK20moGS/vdsROWusZkN7JbUNrJR2MJV
+        rv5CqeBULVZ0CjpT9s7X4joea6EFUYRIfy4bRV+rhZcCTuAXzjCUvCjc3xywU8rTuMAJBrPZLuV2RYmJ
+        iT87xXDyGloWJdhr0TazOO4QrGmbb9kIYjZjnOrGfolo7D8dDrT0htFbzGamq5dDQ1evr5quXbBv5j+E
+        gkhWKHM+ywAAAABJRU5ErkJggg==
+</value>
   </data>
 </root>
